# robot_arm

./: README.md
src/auto_ctrl/: CMakeLists.txt  package.xml
src/auto_ctrl/include/: controller.hpp  kinematics.hpp  pid_controller.hpp
src/auto_ctrl/src/: auto_ctrl_node.cpp  controller.cpp
src/image_transfer/: package.xml  setup.py
src/image_transfer/image_transfer/: subscriber.py  test.py
src/image_transfer/models/: data.yaml  detect.py  export.py  train.py  yolo11.yaml
src/image_transfer/models/best_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
src/image_transfer/models/datasets/bvn/: classes.txt
src/image_transfer/models/datasets/bvn/train/: labels.cache
src/image_transfer/models/datasets/bvn/val/: labels.cache
src/image_transfer/models/runs/train/: args.yaml
src/image_transfer/models/runs/train10/: args.yaml
src/image_transfer/models/runs/train11/: args.yaml
src/image_transfer/models/runs/train12/: args.yaml
src/image_transfer/models/runs/train13/: args.yaml  results.csv
src/image_transfer/models/runs/train14/: args.yaml
src/image_transfer/models/runs/train15/: args.yaml
src/image_transfer/models/runs/train16/: args.yaml
src/image_transfer/models/runs/train17/: args.yaml
src/image_transfer/models/runs/train18/: args.yaml
src/image_transfer/models/runs/train19/: args.yaml
src/image_transfer/models/runs/train2/: args.yaml  results.csv
src/image_transfer/models/runs/train20/: args.yaml  results.csv
src/image_transfer/models/runs/train21/: args.yaml  results.csv
src/image_transfer/models/runs/train3/: args.yaml  results.csv
src/image_transfer/models/runs/train4/: args.yaml  results.csv
src/image_transfer/models/runs/train5/: args.yaml  results.csv
src/image_transfer/models/runs/train6/: args.yaml  results.csv
src/image_transfer/models/runs/train7/: args.yaml  results.csv
src/image_transfer/models/runs/train8/: args.yaml  results.csv
src/image_transfer/models/runs/train9/: args.yaml  results.csv
src/image_transfer/models/yolo11n_ncnn_model/: metadata.yaml
src/keyboard_ctrl/: CMakeLists.txt  package.xml
src/keyboard_ctrl/src/: keyboard_ctrl_node.cpp  keyboard_evdev_node.cpp
src/learning_interface/msg/: ObjectPosition.msg
src/position/: package.xml  setup.py
src/position/position/: position_sub.py
src/serial_comm/: CMakeLists.txt  package.xml
src/serial_comm/src/: serial_comm_node.cpp
(+61 files in other folders)
