<?xml version="1.0"?>
<package format="3">
  <name>bolt_tracker_control</name>
  <version>0.1.0</version>
  <description>Active visual servoing bolt tightening</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
