<?xml version="1.0"?>
<package format="3">
  <name>keyboard_ctrl</name>
  <version>0.0.1</version>
  <description>Keyboard control for robot arm</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>